# mx-ping-pong-dapp-rs

./: .env  .gitignore  Cargo.toml  dump.rdb  install.sh  readme.md  setup.sh
cron-job/: Cargo.toml
cron-job/src/: main.rs  types.rs
frontend/: Cargo.toml  ctfBlac.pem  readme.md  trunk.toml
frontend/src/: config.rs  context.rs  main.rs  routes.rs  styles.css
frontend/src/components/: admin_panel.rs  admin_panel_at_home.rs  button.rs  contract_address_modal.rs  mod.rs  query_response_modal.rs  tx_form_modal.rs  tx_status_modal.rs
frontend/src/interactor/: Cargo.toml  interactor.rs
frontend/src/pages/: admin.rs
frontend/src/requests/: contract_code.rs  helpers.rs  mod.rs  query.rs  request.rs  transaction.rs  types.rs
frontend/src/transactions/: helpers.rs  mod.rs  proxy.rs  transaction.rs  tx_models.rs
microservice/: Cargo.toml  ping-pong-egld.mxsc.json  readme.md
microservice/src/: main.rs
microservice/src/interactor/: Cargo.toml  interactor.rs
microservice/src/routes/: helpers.rs  mod.rs  proxy.rs  query.rs  query_models.rs  setup.rs  transaction.rs  tx_models.rs
microservice/src/routes/model/: mod.rs  query.rs  tx.rs
microservice/src/shared_state/: mod.rs  ping-pong-egld.mxsc.json  state.rs  state.toml
scenario/: Cargo.toml
scenario/src/: imports.rs  lib.rs  scenario_macros.rs
scenario/src/facade/: scenario_world_register.rs
scenario/src/facade/expr/: file_path.rs  mxsc_path.rs  num_expr.rs  register_code_source.rs
scenario/src/facade/result_handlers/: expect_error.rs  expect_message.rs
scenario/src/facade/world_tx/: scenario_check_state.rs  scenario_tx_env.rs
scenario/src/scenario/: parse_util.rs
scenario/src/scenario/model/: block_info.rs  new_address.rs  scenario.rs  storage_check.rs  storage_details_check.rs
scenario/src/scenario/model/account_data/: account.rs  account_check.rs  accounts_check.rs
scenario/src/scenario/model/esdt_data/: esdt.rs  esdt_check.rs  esdt_data_check.rs  esdt_instance.rs  esdt_instance_check.rs  esdt_instances_check.rs  esdt_map_check.rs  esdt_map_contents_check.rs
scenario/src/scenario/model/step/: sc_deploy_step.rs  step_enum.rs  typed_sc_deploy.rs
scenario/src/scenario/model/transaction/: log_check.rs  logs_check.rs  tx_call.rs  tx_deploy.rs  tx_esdt.rs  tx_expect.rs  tx_interpret_util.rs  (+3 more)
scenario/src/scenario/run_trace/: scenario_prettify.rs  scenario_trace.rs
scenario/src/scenario/tx_to_step/: step_annotation.rs
scenario/src/whitebox_legacy/: contract_obj_wrapper.rs  mandos_generator.rs  raw_converter.rs
scenario/tests/: address_eq_test.rs  big_float_test.rs  big_int_test.rs  big_uint_test.rs  contract_call_test.rs  contract_without_macros.rs  derive_managed_vec_item_biguint_test.rs  derive_managed_vec_item_esdt_token_payment_test.rs  derive_managed_vec_item_struct_3.rs  esdt_token_payment_test.rs  hex_call_data_arg_load.rs  managed_buffer_read_to_end_test.rs  managed_codec_test.rs  managed_decimal_test.rs  managed_option_test.rs  managed_ref_test.rs  managed_type_debug_test.rs  managed_vec_test.rs  multi_value_encoded_test.rs  path_test.rs  scenarios_io_test.rs  scenarios_self_test.rs  single_tx_api_test.rs  static_buffer_ref_test.rs  test_hash_bi_di_mapper.rs  test_hash_map_mapper.rs  test_hash_map_storage_mapper.rs  test_hash_set_mapper.rs  test_hash_unordered_set_mapper.rs  test_linked_list_mapper.rs  test_print_api.rs  test_queue_mapper.rs  test_vec_mapper.rs  token_identifier_test.rs
sdk/core/: Cargo.toml  README.md
sdk/core/examples/: account.rs  account_storage.rs  generate_mnemonic.rs  get_esdt_tokens.rs  get_hyper_block_by_hash.rs  get_hyper_block_by_nonce.rs  get_hyper_block_latest.rs  get_network_config.rs  get_network_economics.rs  sign_tx.rs  sign_txs.rs  tx_cost.rs  tx_default_args.rs  tx_info.rs  vm_query.rs
sdk/core/src/gateway/: gateway_tx.rs  gateway_tx_retrieve.rs
sdk/core/tests/: wallet_test.rs
sdk/my-scenario-format/: Cargo.toml
sdk/my-scenario-format/src/value_interpreter/: file_loader.rs
sdk/my-scenario-format/tests/: reconstructor_tests.rs
sdk/scenario-format/tests/: interpreter_test.rs
snippets/: Cargo.toml
snippets/src/: account_tool.rs  imports.rs  interactor.rs  interactor_dns.rs  interactor_sender.rs  lib.rs  network_response.rs  test_wallets.rs
snippets/src/interactor_scenario/: interactor_sc_call.rs  interactor_sc_deploy.rs  interactor_sc_extra.rs  interactor_transfer.rs  interactor_vm_query.rs
snippets/src/interactor_tx/: interactor_exec_call.rs  interactor_exec_deploy.rs  interactor_exec_env.rs  interactor_exec_step.rs  interactor_exec_transf.rs  interactor_exec_upgrade.rs  interactor_prepare_async.rs  interactor_query_call.rs  interactor_query_env.rs  interactor_query_step.rs
snippets/src/multi/: homogenous_tx_buffer.rs  interactor_multi_sc_exec.rs  interactor_multi_sc_process.rs  interactor_step.rs  step_buffer.rs
snippets/tests/: test_tx_deployed_address.rs  test_tx_issued_token_identifier.rs  test_tx_multi_contract_sc_result.rs  test_tx_multiple_sc_results.rs  test_tx_sc_result.rs
(+9 files in other folders)
