[package]
name = "cron-job"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13.5"
actix-rt = "2.10"
actix-web = "4.0"
dotenv = "0.15.0"
redis = { version = "0.27.0", features = ["async-std-comp"] }
serde = "1.0.210"
serde_json = "1.0.128"

[dependencies.multiversx-sc-snippets]
version = "0.53.0"
