[package]
name = "frontend"
version = "0.1.0"
edition = "2021"


[dependencies.multiversx-sc-snippets]
version = "0.53.0"

[dependencies.interactor_frontend]
path = "src/interactor"

[dependencies]
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
gloo-timers = "0.3.0"
console_log = "0.2"
log = "0.4"
reqwest = { version = "0.12.7", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
yew = { version = "0.20.0", features = ["csr"] }
yew_icons = { version = "0.7.3", features = [
    "BootstrapHeartFill",
    "FontAwesomeSolidXmark",
    "FontAwesomeRegularHourglass",
    "FontAwesomeSolidCircleCheck",
    "FontAwesomeRegularCircleXmark",
    "LucideMaximize2",
    "LucideMinimize2",
    "OcticonsLinkExternal16",
] }
yew-router = { version = "0.17.0" }
web-sys = { version = "0.3.70", features = ["HtmlFormElement"] }
getrandom = { version = "0.2", features = ["js"] }
tokio = { version = "1.40", features = ["full"] }