[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
console_log = "0.2"
log = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = "1.0.210"
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
yew = { version = "0.20.0", features = ["csr"] }
yew_icons = { version = "0.7.3", features = ["BootstrapHeartFill"] }
yew-router = { version = "0.17.0" }
