[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
console_log = "0.2"
log = "0.4"
serde = { version = "1.0.210", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0.128"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.32"
serde-wasm-bindgen = "0.6.5"
yew = { version = "0.20.0", features = ["csr"] }
yew_icons = { version = "0.7.3", features = [
    "BootstrapHeartFill",
    "FontAwesomeSolidXmark",
    "FontAwesomeRegularHourglass",
    "FontAwesomeSolidCircleCheck",
    "FontAwesomeRegularCircleXmark",
    "LucideMaximize2",
    "LucideMinimize2",
    "OcticonsLinkExternal16",
] }
yew-router = { version = "0.17.0" }
web-sys = "0.3.70"

[dependencies.multiversx-my-sc-snippets]
path = "../snippets"
