[package]
name = "microservice"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = "1.0.210"
serde_json = "1.0.128"
dotenv = "0.15.0"
redis = { version = "0.26.1", features = ["async-std-comp"] }
futures = "0.3.30"
async-std = "1.13.0"
chrono = "0.4.38"

[dependencies.multiversx-sc-snippets]
version = "0.53.0"

[dependencies.interactor]
path = "src/interactor"
