[package]
name = "microservice"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7"
actix-web = "4.9.0"
chrono = "0.4.38"
dotenv = "0.15.0"
redis = { version = "0.27.0", features = ["async-std-comp"] }
serde = "1.0.210"
serde_json = "1.0.128"

[dependencies.multiversx-sc-snippets]
version = "0.53.0"

[dependencies.interactor]
path = "src/interactor"
