[package]
name = "microservice"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
serde = "1.0.210"
serde_json = "1.0.128"
dotenv = "0.15.0"
redis = { version = "0.27.0", features = ["async-std-comp"] }
futures = "0.3.30"
async-std = "1.13.0"
chrono = "0.4.38"
tokio = "1.40.0"
actix-cors = "0.7"

[dependencies.multiversx-my-sc-snippets]
path = "../snippets"

[dependencies.interactor_microservice]
path = "src/interactor"
